--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "uart.h": "c"
+        "uart.h": "c",
+        "*.gitignore": "c",
+        "conversion.h": "c"
     }
 }
